Fixed the little jump of items in mobile version of productos

--- a/css/productos.css
+++ b/css/productos.css
@@ -272,6 +272,10 @@ main h1,
 }
 
 @media screen and (max-width:420px) {
+    main .items .item:hover {
+        transform: none;
+    }
+
     @keyframes changeIphoneImage {
         0% {
             background-image: url('../img/productos/productos_iphone1.png');
